# Intelligent-Web-Scraping

./: README.md  pyproject.toml  requirements.txt
scraping_output/: data.json  guardians_of_lore_chapters_1-5.txt  hockey_team_statistics.json
scraping_output/scrapped_data/: hockey_teams_data.csv
scraping_output/website_analysis_results/: emploi.cnrs.fr_Offres.aspx.json  internships-climate.ipsl.fr_recherche_job_simuler-des-vagues-de-chaleur-extremes-en-europe-avec-le-systeme-aifs-lsce-59_.json  www.cribconnects.com_en_werken-bij.json  www.freechildrenstories.com_guardians-of-lore.json  www.scrapethissite.com_pages_forms_.json  www.werkzoeken.nl_vacatures__filtered=1&from-company-profile=&what=Data+Scientist&r=50&where=Horst&salary=&date=&vacancyid=14621104.json
src/scraping/: config.py  crew.py  main.py
src/scraping/crews/quary_crew/: quary_crew.py
src/scraping/crews/quary_crew/config/: agents.yaml  tasks.yaml
src/scraping/crews/router_crew/: router_crew.py
src/scraping/crews/router_crew/config/: agents.yaml  tasks.yaml
src/scraping/crews/web_analyser_crew/: web_analyser.py
src/scraping/crews/web_analyser_crew/config/: agents.yaml  tasks.yaml
src/scraping/crews/web_scraper_crew/: web_scraper.py
src/scraping/crews/web_scraper_crew/config/: agents.yaml  tasks.yaml
src/scraping/crews/web_scraper_crew2/: web_scraper_crew2.py
src/scraping/crews/web_scraper_crew2/config/: agents.yaml  tasks.yaml
src/scraping/tools/: custom_tool.py
