[project]
name = "scraping"
version = "0.1.0"
description = "scraping using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "scrapfly-sdk>=0.8.23",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
scraping = "scraping.main:run"
run_crew = "scraping.main:run"
train = "scraping.main:train"
replay = "scraping.main:replay"
test = "scraping.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
